--- a/iframes.css
+++ b/iframes.css
@@ -1,14 +1,13 @@
 body{
  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
+ font-size: 12px;
 }
 
 .content{
-	height: 1920px;
-	width: 1200px;
-	display: grid;
+	height: 1090px;
+
 border: 10px solid white;
 border-radius: 20px;
-
 margin: auto;
 position:relative; 
 }
@@ -16,8 +15,8 @@ position:relative;
   position: absolute;
 }
 
-h2{
-
+h1{
+ font-size:  5em;
 }
 
 .title {
@@ -33,7 +32,7 @@ h2{
   width:600px; 
   height:500px; 
   background-color: white;
-  position:relative;
+ 
   margin: auto; 
   margin-left:20px; 
   margin-top:600px; 
