--- a/iframes.css
+++ b/iframes.css
@@ -1,45 +1,44 @@
+*{
+	margin: 0px;
+	padding: 0;
+	box-sizing: border-box;
+	
+}
 body{
  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
  font-size: 12px;
 }
 
 .content{
-	height: 1090px;
-
+height: 2090px;
 border: 10px solid white;
 border-radius: 20px;
 margin: auto;
 position:relative; 
-}
-.content div{
-  position: absolute;
+box-sizing: border-box;
 }
 
 h1{
  font-size:  5em;
 }
 
-.title {
-  width:290px; 
+/*.title {
+  
   height:300px; 
   position:relative; 
-
   margin-top: 250px;
   margin-left: 30px;
-}
+}*/
 
 .frame1{
-  width:600px; 
+  width:620px; 
   height:500px; 
   background-color: white;
- 
   margin: auto; 
-  margin-left:20px; 
-  margin-top:600px; 
   border: 10px solid white;
-border-radius: 10px;
+  border-radius: 10px;
 }
-
+/*
 .frame2{
   width:300px; 
   height:300px; 
@@ -73,3 +72,4 @@ border-radius: 20px;
   position:relative;
   margin: auto; 
 }
+*/
