--- a/iframes.css
+++ b/iframes.css
@@ -6,6 +6,7 @@
 }
 body{
  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
+ box-sizing: border-box;
  font-size: 12px;
 }
 
@@ -35,7 +36,7 @@ h1{
   height:600px; 
   box-sizing: border-box
   background-color: white;
-  margin: auto; 
+ /* margin: auto; */
   position:relative; 
   
 }
