--- a/iframes.css
+++ b/iframes.css
@@ -4,15 +4,14 @@
 	box-sizing: border-box;
 
 }
-/*body{
+body{
  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
  box-sizing: border-box;
  font-size: 12px;
 }
-*/
+
 .content{
 height: 2090px;
-background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
 /*border: 10px solid white;
 border-radius: 20px;*/
 margin: auto;
