--- a/iframes.css
+++ b/iframes.css
@@ -32,23 +32,34 @@ h1{
 }*/
 
 .frame1{
-  width:520px; 
-  height:600px; 
-  box-sizing: border-box
-  background-color: white;
- /* margin: auto; */
-  position:relative; 
+  width:550px; 
+  height:500px; 
+  box-sizing: border-box;
+ background-color: white;
+  margin: auto;
+  position:relative;
+  /*border: 20px solid white; */
+  
   
 }
-/*
+
+/*.frame2{
+ 
+  box-sizing: border-box
+  background-color: white;
+  margin: auto; 
+  position:relative; 
+  
+}*/
+
 .frame2{
-  width:300px; 
-  height:300px; 
+  width:520px; 
+  height:550px; 
   background-color: white;
   position:relative;
-  margin-left:20px ; 
-  border: 10px solid white;
-border-radius: 20px;
+  margin:auto ; 
+  /*border: 10px solid white;*/
+/*border-radius: 20px;*/
 }
 
 .frame3{
@@ -74,4 +85,3 @@ border-radius: 20px;
   position:relative;
   margin: auto; 
 }
-*/
