--- a/iframes.css
+++ b/iframes.css
@@ -4,16 +4,18 @@
 	box-sizing: border-box;
 
 }
-body{
+/*body{
  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
  box-sizing: border-box;
  font-size: 12px;
 }
-
+*/
 .content{
 height: 2090px;
+width: 800px;
 /*border: 10px solid white;
 border-radius: 20px;*/
+background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
 margin: auto;
 position:relative; 
 box-sizing: border-box;
@@ -23,24 +25,21 @@ h1{
  font-size:  5em;
 }
 
-/*.title {
-  
+.title {
+  margin: auto;
   height:300px; 
   position:relative; 
-  margin-top: 250px;
-  margin-left: 30px;
-}*/
+ 
+}
 
 .frame1{
-  width:550px; 
+  width:520px; 
   height:500px; 
-  box-sizing: border-box;
+  border: 10px solid white;
  background-color: white;
   margin: auto;
   position:relative;
-  /*border: 20px solid white; */
-  
-  
+  border-radius: 20px;
 }
 
 /*.frame2{
@@ -58,8 +57,8 @@ h1{
   background-color: white;
   position:relative;
   margin:auto ; 
-  /*border: 10px solid white;*/
-/*border-radius: 20px;*/
+  border: 10px solid white;
+border-radius: 20px;
 }
 
 .frame3{
