--- a/iframes.css
+++ b/iframes.css
@@ -34,6 +34,7 @@ h1{
 .frame1{
   width:520px; 
   height:500px; 
+  box-sizing: border-box;
   border: 10px solid white;
  background-color: white;
   margin: auto;
