--- a/iframes.css
+++ b/iframes.css
@@ -5,35 +5,41 @@
 
 }
 body{
+  height: 100%;
  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
  box-sizing: border-box;
  font-size: 12px;
+  font-family: "Inconsolata", sans-serif;
+ border: 10px solid white;
+border-radius: 20px;
+margin: auto;
+position:relative; 
 }
-
+/*
 .content{
-height: 2090px;
-/*border: 10px solid white;
-border-radius: 20px;*/
+height: 100%;;
+border: 10px solid white;
+border-radius: 20px;
 margin: auto;
 position:relative; 
 box-sizing: border-box;
-}
+}*/
 
 h1{
  font-size:  5em;
 }
 
-/*.title {
-  
+.title {
+  margin: auto;
   height:300px; 
   position:relative; 
   margin-top: 250px;
   margin-left: 30px;
-}*/
+}
 
 .frame1{
-  width:520px; 
-  height:500px; 
+  width:420px; 
+  height:400px; 
   box-sizing: border-box;
   border: 10px solid white;
  background-color: white;
@@ -41,19 +47,39 @@ h1{
   position:relative;
   border-radius: 20px;
 }
-
-/*.frame2{
- 
-  box-sizing: border-box
-  background-color: white;
-  margin: auto; 
-  position:relative; 
-  
-}*/
-
 .frame2{
-  width:520px; 
-  height:550px; 
+  width:420px; 
+  height:400px; 
+  box-sizing: border-box;
+  background-color: white;
+  position:relative;
+  margin:auto ; 
+  border: 10px solid white;
+border-radius: 20px;
+}
+.frame3{
+  width:420px; 
+  height:400px; 
+  box-sizing: border-box;
+  background-color: white;
+  position:relative;
+  margin:auto ; 
+  border: 10px solid white;
+border-radius: 20px;
+}
+.frame4{
+  width:420px; 
+  height:400px; 
+  box-sizing: border-box;
+  background-color: white;
+  position:relative;
+  margin:auto ; 
+  border: 10px solid white;
+border-radius: 20px;
+}
+.frame5{
+  width:420px; 
+  height:400px; 
   box-sizing: border-box;
   background-color: white;
   position:relative;
@@ -62,26 +88,3 @@ h1{
 border-radius: 20px;
 }
 
-.frame3{
-  width:300px; 
-  height:200px; 
-  background-color: white;
-  position:relative;
-  margin: auto; 
-}
-
-.frame4{
-  width:300px; 
-  height:200px; 
-  background-color: white;
-  position:relative;
-  margin: auto; 
-}
-
-.frame5{
-  width:300px; 
-  height:200px; 
-  background-color: white;
-  position:relative;
-  margin: auto; 
-}
