--- a/iframes.css
+++ b/iframes.css
@@ -1,4 +1,4 @@
-*{
+/**{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -24,7 +24,7 @@ margin: auto;
 position:relative; 
 box-sizing: border-box;
 }*/
-
+/*
 h1{
  font-size:  5em;
 }
@@ -87,4 +87,33 @@ border-radius: 20px;
   border: 10px solid white;
 border-radius: 20px;
 }
+*/
+body, html {
+  height: 100%;
+  font-family: "Inconsolata", sans-serif;
+}
 
+.bgimg{
+  background-position: center;
+  background-size: cover;
+  background-image: url("https://cdn.britannica.com/22/206222-131-E921E1FB/Domestic-feline-tabby-cat.jpg");
+  min-height: 75%;
+}
+
+.title{
+  font-size: 90px;
+  color: white;
+  text-align: center;
+}
+
+.content{
+  max-width: 800px;
+  background-color: red;
+  margin: auto;
+}
+
+.iframe1{
+  width:100%;
+
+
+}
