--- a/iframes.css
+++ b/iframes.css
@@ -90,7 +90,9 @@ border-radius: 20px;
 */
 body, html {
   height: 100%;
+  width: 100%;
   font-family: "Inconsolata", sans-serif;
+  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
 }
 
 .bgimg{
@@ -108,12 +110,31 @@ body, html {
 
 .content{
   max-width: 800px;
-  background-color: red;
+  /*background-color: red;*/
   margin: auto;
 }
 
+.frame1{
+  height: 500px;
+  box-sizing: border-box;
+ border:  10px solid white;
+ background-color: white;
+  margin: auto;
+  position:relative;
+  border-radius: 20px;
+}
 .iframe1{
   width:100%;
-
-
+}
+.frame2{
+  height: 500px;
+  box-sizing: border-box;
+ border:  10px solid white;
+ background-color: white;
+  margin: auto;
+  position:relative;
+  border-radius: 20px;
+}
+.iframe2{
+  width:100%;
 }
