--- a/iframes.css
+++ b/iframes.css
@@ -91,7 +91,7 @@ border-radius: 20px;
 body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif;
-  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
+  /*background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  */
 }
 
 .bgimg{
