--- a/iframes.css
+++ b/iframes.css
@@ -91,7 +91,7 @@ border-radius: 20px;
 body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif;
-  /*background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  */
+  background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
 }
 
 .bgimg{
@@ -112,6 +112,10 @@ body, html {
   margin: auto;
 }
 
+.iframe1, .iframe2, .iframe3, .iframe4, .iframe5{
+  width:100%;
+}
+
 .frame1{
   height: 500px;
   box-sizing: border-box;
@@ -121,9 +125,7 @@ body, html {
   position:relative;
   border-radius: 20px;
 }
-.iframe1{
-  width:100%;
-}
+
 .frame2{
   height: 500px;
   box-sizing: border-box;
@@ -133,9 +135,7 @@ body, html {
   position:relative;
   border-radius: 20px;
 }
-.iframe2{
-  width:100%;
-}
+
 
 .frame3{
   height: 500px;
@@ -146,9 +146,7 @@ body, html {
   position:relative;
   border-radius: 20px;
 }
-.iframe3{
-  width:100%;
-}
+
 .frame4{
   height: 500px;
   box-sizing: border-box;
@@ -158,9 +156,7 @@ body, html {
   position:relative;
   border-radius: 20px;
 }
-.iframe4{
-  width:100%;
-}
+
 .frame5{
   height: 500px;
   box-sizing: border-box;
@@ -169,7 +165,4 @@ body, html {
   margin: auto;
   position:relative;
   border-radius: 20px;
-}
-.iframe5{
-  width:100%;
 }
