--- a/iframes.css
+++ b/iframes.css
@@ -116,48 +116,7 @@ body, html {
   width:100%;
 }
 
-.frame1{
-  height: 500px;
-  box-sizing: border-box;
- border:  10px solid white;
- background-color: white;
-  margin: auto;
-  position:relative;
-  border-radius: 20px;
-}
-
-.frame2{
-  height: 500px;
-  box-sizing: border-box;
- border:  10px solid white;
- background-color: white;
-  margin: auto;
-  position:relative;
-  border-radius: 20px;
-}
-
-
-.frame3{
-  height: 500px;
-  box-sizing: border-box;
- border:  10px solid white;
- background-color: white;
-  margin: auto;
-  position:relative;
-  border-radius: 20px;
-}
-
-.frame4{
-  height: 500px;
-  box-sizing: border-box;
- border:  10px solid white;
- background-color: white;
-  margin: auto;
-  position:relative;
-  border-radius: 20px;
-}
-
-.frame5{
+.frame1, .frame2, .frame3, .frame4, .frame5{
   height: 500px;
   box-sizing: border-box;
  border:  10px solid white;
