--- a/iframes.css
+++ b/iframes.css
@@ -1,93 +1,3 @@
-/**{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-
-}
-body{
-  height: 100%;
- background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  
- box-sizing: border-box;
- font-size: 12px;
-  font-family: "Inconsolata", sans-serif;
- border: 10px solid white;
-border-radius: 20px;
-margin: auto;
-position:relative; 
-}
-/*
-.content{
-height: 100%;;
-border: 10px solid white;
-border-radius: 20px;
-margin: auto;
-position:relative; 
-box-sizing: border-box;
-}*/
-/*
-h1{
- font-size:  5em;
-}
-
-.title {
-  margin: auto;
-  height:300px; 
-  position:relative; 
-  margin-top: 250px;
-  margin-left: 30px;
-}
-
-.frame1{
-  width:420px; 
-  height:400px; 
-  box-sizing: border-box;
-  border: 10px solid white;
- background-color: white;
-  margin: auto;
-  position:relative;
-  border-radius: 20px;
-}
-.frame2{
-  width:420px; 
-  height:400px; 
-  box-sizing: border-box;
-  background-color: white;
-  position:relative;
-  margin:auto ; 
-  border: 10px solid white;
-border-radius: 20px;
-}
-.frame3{
-  width:420px; 
-  height:400px; 
-  box-sizing: border-box;
-  background-color: white;
-  position:relative;
-  margin:auto ; 
-  border: 10px solid white;
-border-radius: 20px;
-}
-.frame4{
-  width:420px; 
-  height:400px; 
-  box-sizing: border-box;
-  background-color: white;
-  position:relative;
-  margin:auto ; 
-  border: 10px solid white;
-border-radius: 20px;
-}
-.frame5{
-  width:420px; 
-  height:400px; 
-  box-sizing: border-box;
-  background-color: white;
-  position:relative;
-  margin:auto ; 
-  border: 10px solid white;
-border-radius: 20px;
-}
-*/
 body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif;
@@ -125,3 +35,5 @@ body, html {
   position:relative;
   border-radius: 20px;
 }
+
+/*ANIMATION*/
