--- a/iframes.css
+++ b/iframes.css
@@ -1,6 +1,6 @@
 body, html {
   height: 100%;
-  font-family: "Inconsolata", sans-serif;
+  font-family: 'Roboto Slab', serif;
   /*background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  */
   background-color: beige;
 }
@@ -16,6 +16,7 @@ body, html {
   font-size: 90px;
   color: white;
   text-align: center;
+  animation: fadein 0.5s ease-in;
 }
 
 .content{
@@ -30,11 +31,26 @@ body, html {
 .frame1, .frame2, .frame3, .frame4, .frame5{
   height: 500px;
   box-sizing: border-box;
- border:  10px solid white;
- background-color: white;
+  border:  10px solid white;
+  background-color: white;
   margin: auto;
   position:relative;
-  border-radius: 20px;
+  border-radius: 20px; 
 }
 
 /*ANIMATION*/
+/*:hover{*/
+/*animation: shake 0.5s ease infinite;*/
+/*}*/
+
+@keyframes shake {
+  0%{transform: rotate(0deg);}
+  40%  {transform: rotate(5deg);}
+  /*50%{transform: rotate(0deg);}*/
+  80% {transform: rotate(-5deg);}
+  100% {transform: rotate(0deg);}
+}
+@keyframes fadein {
+ 0% {opacity: 0;}
+ 100% {opacity: 1;}
+}
