--- a/iframes.css
+++ b/iframes.css
@@ -1,4 +1,9 @@
-body, html {
+   * { 
+            margin: 0;
+            padding: 0;
+        }
+
+body{
   height: 100%;
   font-family: 'Roboto Slab', serif;
   /*background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  */
@@ -9,7 +14,7 @@ body, html {
   background-position: center;
   background-size: cover;
   background-image: url("https://cdn.britannica.com/22/206222-131-E921E1FB/Domestic-feline-tabby-cat.jpg");
-  min-height: 75%;
+  height: 100%;
 }
 
 .title{
