--- a/iframes.css
+++ b/iframes.css
@@ -13,8 +13,9 @@ body{
 .cover{
   background-position: center;
   background-size: cover;
-  background-image: url("https://cdn.britannica.com/22/206222-131-E921E1FB/Domestic-feline-tabby-cat.jpg");
+  background-image: url("https://wallpapercave.com/wp/G8WzHBc.jpg");
   height: 100%;
+
 }
 
 h2{
