--- a/iframes.css
+++ b/iframes.css
@@ -11,10 +11,19 @@ body{
 }
 
 .cover{
-  background-position: center;
+  /*background-position: center;
   background-size: cover;
   background-image: url("https://wallpapercave.com/wp/G8WzHBc.jpg");
-  height: 100%;
+  height: 100%;*/
+  width: 700px;
+  height: 400px;
+  background-image: url("https://wallpapercave.com/wp/G8WzHBc.jpg");
+  box-sizing: border-box;
+
+  margin: auto;
+  text-align: center;
+  position:relative;
+
 
 }
 
