--- a/iframes.css
+++ b/iframes.css
@@ -6,27 +6,41 @@
 body{
   height: 100%;
   font-family: 'Roboto Slab', serif;
+ background-image: url("https://i.imgur.com/lxgRxv0.png");
   /*background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  */
-  background-color: beige;
+  
 }
 
 .cover{
   background-position: center;
   background-size: cover;
-  background-image: url("https://wallpapercave.com/wp/G8WzHBc.jpg");
-  height: 100%;*/
+  background-image: url("https://i.imgur.com/wYJ23Wi.png");
+  height: 100%;
   width: 700px;
   height: 400px;
-  background-image: url("https://wallpapercave.com/wp/G8WzHBc.jpg");
   box-sizing: border-box;
   margin: auto;
- 
   position:relative;
+  animation: shake2 1s ease infinite;
 }
 
 h2{
 font-size: 30px;
 text-align: center;
+ font-weight: 700;
+
+ 
+  
+}
+p{
+
+  box-sizing: border-box;
+  font-weight: 400;
+  text-align: center;
+    position:relative;
+  /*border:  5px solid #6b6b6b;*/
+  /*background-color: #f4e7c3;;*/
+
 }
 
 h3{
@@ -50,7 +64,11 @@ strong{
 .content{
   max-width: 700px;
   margin: auto;
-  /*background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);*/
+  background-color: #f7f1de;
+  border:  5px solid #6b6b6b;
+  /*background-color: beige;*/
+
+  
 }
 
 .iframe1, .iframe2, .iframe3, .iframe4, .iframe4-1, .iframe5{
@@ -88,10 +106,13 @@ animation: shake 0.5s ease infinite;
 @keyframes shake {
   0%{transform: rotate(0deg);}
   40%  {transform: rotate(5deg);}
-  /*50%{transform: rotate(0deg);}*/
   80% {transform: rotate(-5deg);}
   100% {transform: rotate(0deg);}
 }
+@keyframes shake2 {
+ 0%, 100%{ transform: rotate(-8deg);}
+    50%{ transform: rotate(6deg); }
+  }
 @keyframes fadein {
  0% {opacity: 0;}
  100% {opacity: 1;}
