--- a/iframes.css
+++ b/iframes.css
@@ -15,12 +15,11 @@ body{
   background-position: center;
   background-size: cover;
   background-image: url("https://i.imgur.com/wYJ23Wi.png");
-  height: 100%;
-  width: 700px;
-  height: 400px;
+   height: 500px;
   box-sizing: border-box;
   margin: auto;
   position:relative;
+  border-radius: 20px; 
   animation: shake2 1s ease infinite;
 }
 
