--- a/iframes.css
+++ b/iframes.css
@@ -27,15 +27,12 @@ h2{
 font-size: 30px;
 text-align: center;
  font-weight: 700;
+ }
 
- 
-  
-}
 p{
 
   box-sizing: border-box;
   font-weight: 400;
-  text-align: center;
     position:relative;
   /*border:  5px solid #6b6b6b;*/
   /*background-color: #f4e7c3;;*/
@@ -64,7 +61,7 @@ strong{
   max-width: 700px;
   margin: auto;
   background-color: #f7f1de;
-  border:  5px solid #6b6b6b;
+  border:  20px solid #f7f1de;
   /*background-color: beige;*/
 
   
