--- a/iframes.css
+++ b/iframes.css
@@ -7,19 +7,15 @@ body{
   height: 100%;
   font-family: 'Roboto Slab', serif;
  background-image: url("https://i.imgur.com/lxgRxv0.png");
-  /*background-image: linear-gradient(45deg, #e0b2c5, #ae83e2,#ff957a);  */
   
 }
 
 .cover{
-  background-position: center;
-  background-size: cover;
-  background-image: url("https://i.imgur.com/wYJ23Wi.png");
-   height: 400px;
+  /*background-image: url("https://i.imgur.com/wYJ23Wi.png");*/
+
   box-sizing: border-box;
   margin: auto;
   position:relative;
-  border-radius: 20px; 
   animation: shake2 1s ease infinite;
 }
 
@@ -34,9 +30,6 @@ p{
   box-sizing: border-box;
   font-weight: 400;
     position:relative;
-  /*border:  5px solid #6b6b6b;*/
-  /*background-color: #f4e7c3;;*/
-
 }
 
 h3{
@@ -67,7 +60,7 @@ strong{
   
 }
 
-.iframe1, .iframe2, .iframe3, .iframe4, .iframe4-1, .iframe5{
+.cover1, .iframe1, .iframe2, .iframe3, .iframe4, .iframe4-1, .iframe5{
   width:100%;
 }
 
