--- a/iframes.css
+++ b/iframes.css
@@ -26,6 +26,14 @@ body{
   animation: shake2 1s ease infinite;
 }
 
+.endcover{
+  box-sizing: border-box;
+  margin: auto;
+  position:relative;
+  animation: shake3 0.2s ease infinite;
+}
+
+
 .title{
   font-size: 90px;
   color: white;
@@ -98,6 +106,14 @@ h2:hover{
  0%, 100%{ transform: rotate(-8deg);}
  50%{ transform: rotate(6deg); }
 }
+@keyframes shake3 {
+  0% {transform: translateX(0);}
+  25%{transform: translateX(-2px) rotate(1deg);}
+  50% {transform: translateX(3px);}
+  80% {transform: translateX(2px)rotate(1deg);}
+  100% {transform: translateX(0) rotate(-1deg);}
+}
+
 @keyframes fadein {
  0% {opacity: 0;}
  100% {opacity: 1;}
